--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,226 @@
 .App {
   text-align: center;
+  margin-top: 25vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  display: flex;
+  position: fixed;
+  background-color: #fff;
+  top: 0;
+  width: 100vw;
+  height: 20vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.chosen-numbers {
+  border: 1px solid #000;
+  height: 100%;
+  width: 13vw;
+  text-align: left;
+  padding-left: 2vw;
+  font-size: 1vw;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.chosen-number {
+  margin-top: 0.5vh;
+}
+
+.chosen-numbers p {
+  display: inline;
+  margin: 0;
+}
+
+.chosen-numbers div {
+  margin-top: 1vw;
+}
+
+.value {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid #000;
+  height: 100%;
+  width: 50vw;
+}
+
+.title {
+  font-size: 1.5vw;
+}
+
+.input-value-div {
+  width: 35%;
+}
+
+.input-value-div p {
+  font-size: 0.6vw;
+  margin: 0;
+}
+
+.input-value {
+  margin-top: 3vh;
+  font-size: 0.8vw;
+  text-align: center;
+  width: 90%;
+}
+
+.function {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  flex-direction: column;
+  border: 1px solid #000;
+  padding-left: 2vw;
+  width: 33vw;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.function p {
+  margin: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.power,
+.divisible {
+  display: flex;
+  align-items: flex-start;
+  font-size: 1vw;
+  height: 3vw;
+}
+
+.function-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #aaa;
+  box-shadow: 0.1vw 0.1vw #000;
+  width: 2vw;
+  height: 2vw;
+  border-radius: 0.2vw;
+  margin: 0.1vw;
+}
+
+.function-button:hover {
+  cursor: pointer;
+}
+
+.function-button:active {
+  box-shadow: none;
+  transition: all 0.3s;
+}
+
+.input-function-div {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-left: 1vw;
+  height: 2vw;
+
+}
+
+.input-function-div p {
+  font-size: 0.6vw;
+  margin: 0;
+}
+
+.function-input {
+  width: 12vw;
+  height: 2vh;
+}
+
+.user_answer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin: 5vh 15vw;
+  max-height: 30vh;
+  width: 70vw;
+  overflow-y: scroll;
+  background: linear-gradient(90deg, rgba(9,9,121,0) 0%, rgba(235,235,235,1) 20%, rgba(235,235,235,1) 50%, rgba(235,235,235,1) 80%, rgba(9,9,121,0) 100%);
+}
+
+.user_answer:first {
+  margin-top: 20vh;
+}
+
+.user_answer p {
+  font-size: 1vw;
+  font-weight: 600;
+  padding: 0.5vw;
+  margin: 0;
+}
+
+.loading-main {
+  margin: 4vh 0;
+  display: flex;
+}
+
+.loading {
+  width: 0.4vw;
+  height: 10vh;
+  background: linear-gradient(45deg, rgb(27, 0, 180), rgb(255, 0, 0));
+  margin: 1vw;
+  animation: wave 1s linear infinite;
+  border-radius: 20px;
+}
+
+.loading:nth-child(2) {
+  opacity: 0;
+  animation-delay: 0.1s;
+}
+
+.loading:nth-child(3) {
+  opacity: 0;
+  animation-delay: 0.2s;
+}
+
+.loading:nth-child(4) {
+  opacity: 0;
+  animation-delay: 0.3s;
+}
+
+.loading:nth-child(5) {
+  opacity: 0;
+  animation-delay: 0.4s;
+}
+
+.loading:nth-child(6) {
+  opacity: 0;
+  animation-delay: 0.5s;
+}
+
+.loading:nth-child(7) {
+  opacity: 0;
+  animation-delay: 0.6s;
+}
+
+.loading:nth-child(8) {
+  opacity: 0;
+  animation-delay: 0.7s;
+}
+
+.loading:nth-child(9) {
+  opacity: 0;
+  animation-delay: 0.8s;
+}
+
+.loading:nth-child(10) {
+  opacity: 0;
+  animation-delay: 0.9s;
+}
+
+@keyframes wave {
+  0% {
+    opacity: 1;
+    transform: scale(0);
   }
-  to {
-    transform: rotate(360deg);
+
+  50% {
+    opacity: 0.5;
+    transform: scale(1);
+  }
+
+  100% {
+    opacity: 1;
+    transform: scale(0);
   }
 }
